# strict-lint-template

./: Cargo.toml  Makefile  README.md  cargo-generate.toml  deny.toml  justfile
.template/workflows/: ci.yml
hooks/: post-script.rhai
template/workflows/: cd-binary.yml.liquid  cd-publish.yml  cd.yml.liquid  ci.yml
